--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,36 @@
 @tailwind utilities;
 
 :root {
-    --foreground-rgb: 0, 0, 0;
-    --background-start-rgb: 214, 219, 220;
-    --background-end-rgb: 255, 255, 255;
-}
+    --frontground-rgb: 255, 255, 255;
+    --background-rgb: 0, 0, 0;
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --foreground-rgb: 255, 255, 255;
-        --background-start-rgb: 0, 0, 0;
-        --background-end-rgb: 0, 0, 0;
-    }
+    --overlay-50: linear-gradient(rgba(2, 15, 8, 0.5), rgba(2, 15, 8, 0.5));
+    --overlay-75: linear-gradient(rgba(2, 15, 8, 0.75), rgba(2, 15, 8, 0.75));
+    --overlay-85: linear-gradient(rgba(2, 15, 8, 0.85), rgba(2, 15, 8, 0.85));
+
+    --section-top-gradient: linear-gradient(
+        180deg,
+        #002426 0%,
+        rgba(0, 37, 49, 0) 100%
+    );
+    --section-bottom-gradient: linear-gradient(
+        0deg,
+        #002426 0%,
+        rgba(0, 37, 49, 0) 100%
+    );
 }
 
 body {
-    color: rgb(var(--foreground-rgb));
-    background: linear-gradient(
-            to bottom,
-            transparent,
-            rgb(var(--background-end-rgb))
-        )
-        rgb(var(--background-start-rgb));
+    color: rgb(var(--frontground-rgb));
+    background-color: rgb(var(--background-rgb));
 }
 
-@layer utilities {
-    .text-balance {
-        text-wrap: balance;
-    }
+.container {
+    @apply mx-auto max-w-screen-lg-mob text-white
+  tab:max-w-screen-tab tab:w-[768px]
+  desk:max-w-screen-desk desk:w-[1280px];
+}
+
+.subtitle {
+    @apply uppercase text-[40px] font-thin leading-[56px] tracking-[-1.6px];
 }
