--- a/sections/Hero/Hero.css
+++ b/sections/Hero/Hero.css
@@ -4,4 +4,20 @@
             url("/images/bg-hero-mob@1x.webp") 1x,
             url("/images/bg-hero-mob@2x.webp") 2x
         );
+
+    @media screen and (min-width: 768px) {
+        background-image: var(--overlay-50),
+            image-set(
+                url("/images/bg-hero-tab@1x.webp") 1x,
+                url("/images/bg-hero-tab@2x.webp") 2x
+            );
+    }
+
+    @media screen and (min-width: 1280px) {
+        background-image: var(--overlay-50),
+            image-set(
+                url("/images/bg-hero-desk@1x.webp") 1x,
+                url("/images/bg-hero-desk@2x.webp") 2x
+            );
+    }
 }
