--- a/components/JoinButton/JoinButton.css
+++ b/components/JoinButton/JoinButton.css
@@ -1,57 +1,53 @@
-.join {
-    &::before {
-        content: "";
+.join::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 42px;
+    height: 53px;
+    background-image: url("../../public/icons/mob-btn-bord-left.svg");
+    opacity: 1;
+}
 
-        width: 42px;
-        height: 53px;
-
-        position: absolute;
-        top: 0;
-        left: 0;
-
-        background-image: url("../../public/icons/mob-btn-bord-left.svg");
-        opacity: 1;
-
-        @media screen and (min-width: 768px) {
-            width: 35px;
-            height: 50px;
-
-            background-image: url("../../public/icons/tab-btn-bord-left.svg");
-        }
-
-        @media screen and (min-width: 1280px) {
-            width: 44px;
-            height: 71px;
-
-            background-image: url("../../public/icons/desk-btn-bord-left.svg");
-        }
+@media (min-width: 768px) {
+    .join::before {
+        width: 35px;
+        height: 50px;
+        background-image: url("../../public/icons/tab-btn-bord-left.svg");
     }
+}
 
-    &::after {
-        content: "";
+@media (min-width: 1280px) {
+    .join::before {
+        width: 44px;
+        height: 71px;
+        background-image: url("../../public/icons/desk-btn-bord-left.svg");
+    }
+}
 
-        width: 42px;
-        height: 53px;
+.join::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 42px;
+    height: 53px;
+    background-image: url("../../public/icons/mob-btn-bord-right.svg");
+    opacity: 1;
+}
 
-        position: absolute;
-        top: 0;
-        right: 0;
+@media (min-width: 768px) {
+    .join::after {
+        width: 35px;
+        height: 50px;
+        background-image: url("../../public/icons/tab-btn-bord-right.svg");
+    }
+}
 
-        background-image: url("../../public/icons/mob-btn-bord-right.svg");
-        opacity: 1;
-
-        @media screen and (min-width: 768px) {
-            width: 35px;
-            height: 50px;
-
-            background-image: url("../../public/icons/tab-btn-bord-right.svg");
-        }
-
-        @media screen and (min-width: 1280px) {
-            width: 44px;
-            height: 71px;
-
-            background-image: url("../../public/icons/desk-btn-bord-right.svg");
-        }
+@media (min-width: 1280px) {
+    .join::after {
+        width: 44px;
+        height: 71px;
+        background-image: url("../../public/icons/desk-btn-bord-right.svg");
     }
 }
