--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,21 @@
     --overlay-50: linear-gradient(rgba(2, 15, 8, 0.5), rgba(2, 15, 8, 0.5));
     --overlay-75: linear-gradient(rgba(2, 15, 8, 0.75), rgba(2, 15, 8, 0.75));
     --overlay-85: linear-gradient(rgba(2, 15, 8, 0.85), rgba(2, 15, 8, 0.85));
+
+    /* --section-gradient-width: 100%; */
+    --section-gradient-height: 247px;
+    --section-tab-gradient-height: 302px;
+
+    --section-top-gradient: linear-gradient(
+        180deg,
+        rgba(0, 24, 38, 0.5) 0%,
+        rgba(0, 37, 49, 0) 100%
+    );
+    --section-bottom-gradient: linear-gradient(
+        0deg,
+        rgba(0, 24, 38, 0.5) 0%,
+        rgba(0, 37, 49, 0) 100%
+    );
 }
 
 body {
