--- a/sections/Career/Career.css
+++ b/sections/Career/Career.css
@@ -1,24 +1,33 @@
 .career {
-    background-image: var(--overlay-50),
+    background-image: var(--overlay-75), var(--section-top-gradient),
+        var(--section-bottom-gradient),
         image-set(
             url("/images/bg-career-mob@1x.webp") 1x,
             url("/images/bg-career-mob@2x.webp") 2x
         );
+    background-size: 100% 100%, 100% var(--section-gradient-height),
+        100% var(--section-gradient-height), cover;
+    background-position: top, top, bottom, center;
+    background-repeat: no-repeat;
 }
 
 @media (min-width: 768px) {
     .career {
-        background-image: var(--overlay-75),
+        background-image: var(--overlay-75), var(--section-top-gradient),
+            var(--section-bottom-gradient),
             image-set(
                 url("/images/bg-career-tab@1x.webp") 1x,
                 url("/images/bg-career-tab@2x.webp") 2x
             );
+        background-size: 100% 100%, 100% var(--section-tab-gradient-height),
+            100% var(--section-tab-gradient-height), cover;
     }
 }
 
 @media (min-width: 1280px) {
     .career {
-        background-image: var(--overlay-75),
+        background-image: var(--overlay-75), var(--section-top-gradient),
+            var(--section-bottom-gradient),
             image-set(
                 url("/images/bg-career-desk@1x.webp") 1x,
                 url("/images/bg-career-desk@2x.webp") 2x
@@ -27,11 +36,16 @@
 }
 
 .career-mobile {
-    background-image: var(--overlay-75),
+    background-image: var(--overlay-50), var(--section-top-gradient),
+        var(--section-bottom-gradient),
         image-set(
             url("/images/bg-career-mob@1x.webp") 1x,
             url("/images/bg-career-mob@2x.webp") 2x
         );
+    background-size: 100% 100%, 100% var(--section-gradient-height),
+        100% var(--section-gradient-height), cover;
+    background-position: top, top, bottom, center;
+    background-repeat: no-repeat;
 }
 
 .policy-field {
